<resources>
    <string name="app_name">Blood Link</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="rigister_here">Rigister Here</string>
    <string name="email">Email</string>
    <string name="navigation_drawer_open">Open drawer navigation</string>
    <string name="navigation_drawer_close">Close drawer navigation</string>
    <string name="register">Register</string>
    <string name="registered_login_here">Registered? Login here</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_for_blood">Request For Blood</string>
    <string name="female">Female</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="radiobutton">RadioButton</string>
    <string name="firest_name">First Name</string>
    <string name="male1">Male</string>
    <string name="female1">Female</string>
    <string-array name="Blood_Group">
        <item>A+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>AB-</item>
        <item>O-</item>
    </string-array>
    <string name="required_blood_group_type">Required Blood Group Type</string>
    <string name="save">Save</string>
    <string name="_91_84783xxxxx">+91 84783xxxxx</string>
    <string name="_91_xxxviii">+91 XXXVIII</string>
    <string name="_91_000000000">+91 000000000</string>
    <string name="date">date</string>
    <string name="_91">+91</string>
    <string name="enter_your_email_here">Enter Your Email Here</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="stock_replacement">Stock Replacement</string>
    <string name="routine_non_urgent">Routine/non-urgent</string>
    <string name="urgent_emergency">Urgent/Emergency</string>
    <string name="description">Description</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="email1">_Email</string>
    <string name="email2">Email</string>
    <string name="blood_group">Blood Group</string>
    <string name="blood_link">Blood Link</string>
    <string name="email3">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="your_message">Your Message</string>
</resources>